# wasm_demo

./: .gitignore  Cargo.toml  README.md  spin.toml
.claude/: settings.local.json
browser/: .htaccess  Cargo.toml  index.html  manifest.json  sw.js
browser/src/: lib.rs
src/: lib.rs
